# c_hybrid_plugin_loader

./: CMakeLists.txt  README.md
docs/: presentation.md
include/: plugin_api.h  plugin_portability.h
src/: dynamic_plugin.c  main.c  plugin_defaults.c  plugin_loader.c  plugin_overrides.c
